# SynGPU

./: .gitignore  README.md  args.txt  run.py
originalSource/: README.txt  create_run  make_header.cpp  microtime.h  ran1.h  syn_analysis.m  synfireGrowth.cpp
port/: CMakeLists.txt  makefile
port/src/: main.cpp
port/src/common/: cuda_utils.h  helpers.h  microtime.cpp  microtime.h  random.cpp  random.h  utility.h
port/src/gpu/: CUSynfire.cpp  CUSynfire.h  cu_synfire.cpp  cu_synfire.cu  cu_synfire.cuh  cu_synfire.h  cudaMain.cu  cudaTester.cu
port/src/synfire/: neuron.cpp  neuron.h  synapses.cpp  synapses.h  synfire.cpp  synfire.h  synfire_constants.h  synfire_helpers.cpp  synfire_helpers.h
rpt/: proposal.tex  report.tex  results.txt
